...

    var title: String {
        switch self {
        case .all: return String(localized: "All")
        case .fruits: return String(localized: "Fruits")
        case .vegetables: return String(localized: "Vegetables")
        case .fridge: return String(localized: "Fridge")
        case .counter: return String(localized: "Counter")
        case .freezer: return String(localized: "Freezer")
        case .eatFirst: return String(localized: "Eat First")
        }
    }
}
...
